src/components/Items/styles/_SoulshieldList.scss
.item-list {
    .soulshields {
        @media (max-width: 1199px) {
            width: 100%;
        }

        & > .ant-collapse {
            & > .ant-collapse-item > .ant-collapse-header {
                .item-header {
                    height: 8rem;
                    overflow: hidden;
                    display: flex;
                    margin-bottom: -1rem;
                    transition: all 0.2s;

                    .item-icon {
                        padding: 0 1rem;
                        height: 15rem;
                        align-self: flex-start;
                    }
                }

                .arrow {
                    margin-top: 1.5rem !important;
                    height: 100%;
                }
            }

            & > .ant-collapse-item-active > .ant-collapse-header {
                .item-header {
                    height: 16rem;
                }
            }
        }

        .set-effects {
            .set-effect-name {
                color: goldenrod;
                margin-bottom: 0.5rem;
            }

            .set-effect {
                display: flex;
                margin-bottom: 0.5rem;
                font-size: 1.2rem;

                .set-label {
                    width: 1.5rem;
                    height: 1.5rem;
                    line-height: 1.3rem;
                    text-align: center;
                    background: #4f4b04;
                    border: 0.1rem solid #b4b41d;
                    border-radius: 0.2rem;
                    font-size: 1.2rem;
                    margin-right: 1rem;
                }

                .attribute {
                    color: limegreen;
                }
            }
        }

        .soulshield-pieces {
            margin-top: 1.5rem;
            background: rgba(25, 25, 25, 0.6);
            .item-header {
                padding-left: 1rem;
            }

            .soulshield-piece-list {
                display: flex;
                flex-wrap: wrap;
                justify-content: space-around;
            }

            .soulshield-piece {
                padding: 1rem 0;
                min-width: 25%;
                max-width: 50%;

                &.hidden {
                    padding: 0;
                }

                .soulshield-piece-name {
                    display: flex;
                    align-items: center;
                    margin-bottom: 1rem;
                    font-size: 1.6rem;

                    img {
                        width: 5rem;
                        margin-right: 1.5rem;
                    }
                }

                .soulshield-piece-stat {
                    margin-bottom: 1rem;

                    .m1 {
                        font-size: 1.6rem;
                    }

                    .m2 {
                        font-size: 1.4rem;
                    }

                    .sub {
                        font-size: 1.2rem;
                        margin-bottom: 1rem;

                        table {
                            .stat-label {
                                width: 10rem;
                                max-width: 50%;
                            }
                        }

                        .tag {
                            margin-left: 0.5rem;
                            font-size: 0.7em;
                            padding: 0em 1em;
                            border-radius: 0.2rem;
                            font-weight: 400;
                            background: darkgoldenrod;
                        }
                    }

                    .maxFuse {
                        color: limegreen;
                        font-size: 1.2rem;
                    }
                }
            }

            .ant-collapse-header {
                height: 4rem;

                .arrow {
                    margin: 0 !important;
                }
            }
        }
    }
}

